Added the destination as australia and England

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,11 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#australia {
+    background-color: #4dd0e1;
+}
+
+#england {
+    background-color: #800000;
+}
